# Modulair

./: .gitignore  .replit  README.md  add_learning_style.py  ai_service.py  app.py  console.txt  db.py  gunicorn.conf.py  main.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  test_connection.py  test_db.py  test_db_fields.py  test_json_parsing.py  test_quiz_generation.py  test_with_env.py
attached_assets/: Pasted--2025-06-14-19-15-39-0000-981-INFO-Handling-signal-winch-2025-06-14-19-15-39-0000-981--1749928742233_1749928742235.txt  Pasted--ai-service-py-line-726-Traceback-most-recent-call-last-File-home-runner-workspace-pyt-1750012647245_1750012647247.txt  Pasted-06-14-19-20-02-0000-1400-INFO-Handling-signal-winch-2025-06-14-19-20-02-0000-1400-INFO-1749928947545_1749928947546.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-submit-quiz-w-1749903983727_1749903983730.txt  Pasted-INFO-azure-core-pipeline-policies-http-logging-policy-Request-URL-https-models-github-ai-inferen-1749968684709_1749968684710.txt  Pasted-Prompt-for-Building-an-AI-Driven-Ed-Tech-Web-App-in-Replit-I-want-to-build-a-fully-functional-mobi-1749900372878_1749900372878.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1749903774040_1749903774042.txt
templates/: assignment_detail.html  assignments.html  base.html  certificate.html  course.html  course_generation_progress.html  create_course.html  final_exam.html  final_exam_question.html  final_exam_review.html  index.html  quiz.html  (+5 more)
(+12 files in other folders)
